# sre-alert-multi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml
models/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
prompts/: sre_analysis.md
utils/: fallback_manager.py  model_factory.py
